<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:text="Welcom To LoginApp"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="28sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="35dp">

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/prompt_email"
            android:textColor="@color/colorText"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvEmail"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorText" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEmail"
            android:layout_alignParentLeft="true"
            android:text="@string/prompt_password"
            android:textColor="@color/colorText"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPassword"
            android:inputType="textPassword"
            android:textColor="@color/colorText" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnLogin"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPassword"
            android:layout_marginTop="24dp"
            android:text="@string/label_login_btn"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            app:backgroundTint="@color/colorAccent" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:layout_marginTop="80dp"
            android:text="@string/sign_up_message"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="18dp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>