<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="12dp">

            <ImageView
                android:id="@+id/iVUser"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:src="@color/colorAccent" />

            <TextView
                android:id="@+id/tvChangePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iVUser"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:text="Change Photo"
                android:textColor="@color/colorDarkText"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvChangePhoto"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="30dp"
                android:text="@string/prompt_first_name"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/etFName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv6"
                android:hint="Enter First Name"
                android:textColor="@color/colorDarkText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etFName"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="8dp"
                android:text="@string/prompt_last_name"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/etLName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv7"
                android:hint="Enter Last Name"
                android:textColor="@color/colorDarkText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etLName"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="8dp"
                android:text="@string/prompt_email"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv1"
                android:layout_marginTop="8dp"
                android:hint="Enter Email Address"
                android:textColor="@color/colorDarkText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etEmail"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="8dp"
                android:text="@string/prompt_Phone"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv2"
                android:layout_marginTop="8dp"
                android:hint="Enter Phone Number"
                android:textColor="@color/colorDarkText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etPhone"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="8dp"
                android:text="@string/prompt_Address"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv3"
                android:layout_marginTop="8dp"
                android:hint="Enter Address"
                android:textColor="@color/colorDarkText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etAddress"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="8dp"
                android:text="@string/prompt_Gender"
                android:textSize="16dp" />

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv4"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="rbClicked"
                    android:text="Male" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="rbClicked"
                    android:text="Female" />
            </RadioGroup>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSave"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rgGender"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/label_save_btn"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                app:backgroundTint="@color/colorAccent" />
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>