<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".SignupActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="30dp"
        android:text="Sign Up to App"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="28sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="35dp">

        <!--<TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/prompt_name"
            android:textColor="@color/colorText"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvName"
            android:inputType="text"
            android:textColor="@color/colorText" />-->
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/prompt_email"
            android:textColor="@color/colorText"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvEmail"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorText" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEmail"
            android:layout_alignParentLeft="true"
            android:text="@string/prompt_password"
            android:textColor="@color/colorText"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPassword"
            android:inputType="textPassword"
            android:textColor="@color/colorText" />
        <TextView
            android:id="@+id/tvConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_alignParentLeft="true"
            android:text="@string/prompt_confirm_password"
            android:textColor="@color/colorText"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvConfirmPassword"
            android:inputType="textPassword"
            android:textColor="@color/colorText" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnRegister"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etConfirmPassword"
            android:layout_marginTop="24dp"
            android:text="@string/label_register_btn"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            app:backgroundTint="@color/colorAccent" />
    </RelativeLayout>
</LinearLayout>