<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="12dp">

            <ImageView
                android:id="@+id/iVUser"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:src="@color/colorAccent" />

            <LinearLayout
                android:id="@+id/NameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iVUser"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvFName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="First Name"
                    android:textColor="@color/colorDarkText"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tvLName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="Last Name"
                    android:textColor="@color/colorDarkText"
                    android:textSize="16dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/NameLayout"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="30dp"
                android:text="@string/prompt_email"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv1"
                android:layout_marginTop="8dp"
                android:text="User Email will show here"
                android:textColor="@color/colorDarkText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvEmail"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="8dp"
                android:text="@string/prompt_Phone"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv2"
                android:layout_marginTop="8dp"
                android:text="User Phone will show here"
                android:textColor="@color/colorDarkText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPhone"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="8dp"
                android:text="@string/prompt_Address"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv3"
                android:layout_marginTop="8dp"
                android:text="User Address will show here"
                android:textColor="@color/colorDarkText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etAddress"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="8dp"
                android:text="@string/prompt_Gender"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/etGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv4"
                android:layout_marginTop="8dp"
                android:text="User Gender will show here"
                android:textColor="@color/colorDarkText"
                android:textSize="20sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnEdit"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etGender"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/label_edit_btn"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                app:backgroundTint="@color/colorAccent" />
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>